Updated Russian translation

--- a/addons/sourcemod/translations/ru/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/ru/ultimate-mapchooser.phrases.txt
@@ -45,7 +45,7 @@
 
     "End of Map Vote Map Won"
     {
-        "ru"    "Следуйщей картой будет {1}."
+        "ru"    "Следующей картой будет {1}."
     }
 
     "Vote Win Percentage"
@@ -70,12 +70,12 @@
 
     "End of Map Vote Group Won"
     {
-        "ru"    "Следуйщей картой будет '{1},' выбранная из группы карт '{2}.'"
+        "ru"    "Следующей картой будет '{1},' выбранная из группы карт '{2}.'"
     }
 
     "Runoff Msg"
     {
-        "ru"    "Голосование Провалилось! Не было достаточно голосов."
+        "ru"    "Голосование провалилось! Не было достаточно голосов."
     }
 
     "Another Vote"
