--- a/addons/sourcemod/translations/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/ultimate-mapchooser.phrases.txt
@@ -205,9 +205,8 @@
 
 	"Default Warning"
 	{
-		//{TIME} is where the time in seconds is going to be placed.
-		//Please keep {TIME} in this phrase in english.
-		"en" "{TIME} seconds until vote."
+		"#format"	"{1:i}"
+		"en"		"{1} seconds until vote."
 	}
 
 	"Vote Failed"
