--- a/addons/sourcemod/translations/lt/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/lt/ultimate-mapchooser.phrases.txt
@@ -191,9 +191,7 @@
 
 	"Default Warning"
 	{
-		//{TIME} is where the time in seconds is going to be placed.
-		//Please keep {TIME} in this string in english, it is not an error.
-		"lt" "{TIME} sekundziu iki balsavimo."
+		"lt" "{1} sekundziu iki balsavimo."
 	}
 
 	"Vote Failed"
