End Vote Warnings - Fix main issue & enhance it:
- Fix lists cleanup at OnConfigsExecuted deleting vital data loaded at OnMapStart (when the former is called later), breaking the whole display
- Specialize default last countdown notification into a more significative translation ("Map Vote Started")
- Allow multiple print destinations for the timed notifications by increasing the notification type buffers

--- a/addons/sourcemod/translations/chi/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/chi/ultimate-mapchooser.phrases.txt
@@ -185,9 +185,9 @@
 		"chi" "否"
 	}
 
-	"Starting Map Vote"
+	"Map Vote Started"
 	{
-		"chi" "开始地图投票。 投票结束后，地图将更改."
+		"chi" "地图投票开始。"
 	}
 
 	"Default Warning"
