--- a/addons/sourcemod/translations/ru/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/ru/ultimate-mapchooser.phrases.txt
@@ -183,9 +183,9 @@
 		"ru" "Нет"
 	}
 
-	"Starting Map Vote"
+	"Map Vote Started"
 	{
-		"ru" "Начинается голосование за карту. Карта поменяется сразу."
+		"ru" "Начинается голосование за карту."
 	}
 
 	"Default Warning"
