--- a/addons/sourcemod/translations/ko/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/ko/ultimate-mapchooser.phrases.txt
@@ -61,7 +61,7 @@
 
 	"Map Change in 5"
 	{
-		"ko" "맵이 5초 후 바뀝니다."
+		"ko" "맵이 5초 후 바뀝니다..."
 	}
 
 	"Map Change at Round End"
@@ -81,7 +81,7 @@
 
 	"Another Vote"
 	{
-		"ko" "다른 투표가 {1}초 동안 진행중입니다."
+		"ko" "다른 투표가 {1}초 동안 진행중입니다..."
 	}
 
 	"Player Disconnect RTV"
@@ -149,11 +149,6 @@
 		"ko" "다음맵이 될 때 까지 맵을 추천할 수 없습니다."
 	}
 
-	"Pending Vote"
-	{
-		"ko" "투표가 임박했습니다."
-	}
-
 	"Next Map"
 	{
 		"ko" "다음 맵: {1}"
@@ -191,7 +186,7 @@
 
 	"Default Warning"
 	{
-		"ko" "투표까지 {1}초."
+		"ko" "투표까지 {1}초..."
 	}
 
 	"Vote Failed"
@@ -201,7 +196,7 @@
 
 	"Selective Runoff"
 	{
-		"ko" "투표를 하지않은 플레이어나, 투표가 제거된 플레이어에게 투표 메뉴를 띄웁니다."
+		"ko" "투표를 하지않은 플레이어나, 투표가 제거된 플레이어에게 투표 메뉴를 띄웁니다..."
 	}
 
 	"No RTV Admin"
