--- a/addons/sourcemod/translations/ru/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/ru/ultimate-mapchooser.phrases.txt
@@ -60,7 +60,7 @@
 
 	"Map Change in 5"
 	{
-		"ru" "Карта сменится через 5 секунд."
+		"ru" "Карта сменится через 5 секунд..."
 	}
 
 	"Map Change at Round End"
@@ -70,7 +70,7 @@
 
 	"End of Map Vote Group Won"
 	{
-		"ru" "Следующей картой будет '{1},' выбранная из группы карт '{2}.'"
+		"ru" "Следующей картой будет '{1}', выбранная из группы карт '{2}'."
 	}
 
 	"Runoff Msg"
@@ -80,7 +80,7 @@
 
 	"Another Vote"
 	{
-		"ru" "Другое голосование в пути через {1} секунд."
+		"ru" "Другое голосование в пути через {1} секунд..."
 	}
 
 	"Player Disconnect RTV"
@@ -148,11 +148,6 @@
 		"ru" "Не могу номинировать пока не будет следующая карта."
 	}
 
-	"Pending Vote"
-	{
-		"ru" "Ожидается Голос"
-	}
-
 	"Next Map"
 	{
 		"ru" "Следующая Карта: {1}"
@@ -190,7 +185,7 @@
 
 	"Default Warning"
 	{
-		"ru" "{1} секунд до голосования."
+		"ru" "{1} секунд до голосования..."
 	}
 
 	"Vote Failed"
@@ -200,7 +195,7 @@
 
 	"Selective Runoff"
 	{
-		"ru" "Голосование для игроков, которые не голосовали или их голос не был учтен в предыдущем голосовании."
+		"ru" "Голосование для игроков, которые не голосовали или их голос не был учтен в предыдущем голосовании..."
 	}
 
 	"No RTV Admin"
