--- a/addons/sourcemod/translations/de/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/de/ultimate-mapchooser.phrases.txt
@@ -67,7 +67,7 @@
 
 	"Map Change in 5"
 	{
-		"de" "Kartenwechsel in 5 Sekunden."
+		"de" "Kartenwechsel in 5 Sekunden..."
 	}
 
 	"Map Change at Round End"
@@ -77,12 +77,7 @@
 
 	"End of Map Vote Group Won"
 	{
-		"de" "Die nächste Karte wird '{1},' ausgewählt aus Kartengruppe '{2}.'"
-	}
-
-	"RTV Group Won"
-	{
-		"de" "Ändere Karte zu '{1},' ausgewählt aus Kartengruppe '{2}.'"
+		"de" "Die nächste Karte wird '{1}', ausgewählt aus Kartengruppe '{2}'."
 	}
 
 	"Runoff Msg"
@@ -92,7 +87,7 @@
 
 	"Another Vote"
 	{
-		"de" "Eine weitere Abstimmung findet in {1} Sekunden statt."
+		"de" "Eine weitere Abstimmung findet in {1} Sekunden statt..."
 	}
 
 	"Player Disconnect RTV"
@@ -159,11 +154,6 @@
 		"de" "Kann nicht abstimmen bis zur nächsten Karte."
 	}
 
-	"Pending Vote"
-	{
-		"de" "bevorstehende Abstimmung"
-	}
-
 	"Next Map"
 	{
 		"de" "Nächste Karte: {1}"
@@ -201,7 +191,7 @@
 
 	"Default Warning"
 	{
-		"de" "{1} Sekunden bis zur Abstimmung."
+		"de" "{1} Sekunden zu Abstimmung.."
 	}
 
 	"No RTV Admin"
