--- a/addons/sourcemod/translations/es/nativevotes.phrases.txt
+++ b/addons/sourcemod/translations/es/nativevotes.phrases.txt
@@ -2,11 +2,6 @@
 {
 	"NativeVotes Revote"
 	{
-		"es" "votar de nuevo..."
-	}
-
-	"NativeVotes Revote No Time"
-	{
-		"es" "No hay tiempo suficiente para votar de nuevo."
+		"es" "Votando de nuevo..."
 	}
 }
