--- a/addons/sourcemod/translations/es/ultimate-mapchooser.phrases.txt
+++ b/addons/sourcemod/translations/es/ultimate-mapchooser.phrases.txt
@@ -4,37 +4,37 @@
 {
 	"Slot Block Message 1"
 	{
-		"es" "Considere qué mapa quiere jugar"
+		"es" "Considere qué mapa desea jugar"
 	}
 
 	"Slot Block Message 2"
 	{
-		"es" "y no apriete los botones desconsideradamente."
+		"es" "y no pulse los botones inadvertidamente."
 	}
 
 	"Map Vote Menu Title"
 	{
-		"es" "Vote por el próximo mapa!"
+		"es" "¡Vote por el próximo mapa!"
 	}
 
 	"Group Vote Menu Title"
 	{
-		"es" "Vote por la próxima categoria de mapas!" 
+		"es" "¡Vote por el próximo grupo de mapas!" 
 	}
 
 	"Extend Map"
 	{
-		"es" "Extender el mapa"
+		"es" "Extender Mapa"
 	}
 
 	"Don't Change"
 	{
-		"es" "No Cambie"
+		"es" "No Cambiar"
 	}
 
 	"End of Map Vote Over"
 	{
-		"es" "La votación del mapa ha terminado."
+		"es" "La votación de mapa ha finalizado."
 	}
 
 	"Map Extended"
@@ -51,107 +51,102 @@
 	{
 		//Deben de haber dos símbolos de porcentaje aquí.
 		//Si solo se ve uno, no se mostrara el símbolo de porcentaje en el juego. 
-		"es" "Se ha recibido un {1}%% de {2} votos"
+		"es" "Se ha recibido un {1}%% de {2} voto/s"
 	}
 
 	"Map Unchanged"
 	{
-		"es" "No habra cambio de mapa."
+		"es" "El mapa actual no se cambiará."
 	}
 
 	"Map Change in 5"
 	{
-		"es" "Cambio de mapa en 5 segundos."
+		"es" "Cambiando de mapa en 5 segundos..."
 	}
 
 	"Map Change at Round End"
 	{
-		"es" "El mapa cambiara al final de esta ronda."
+		"es" "El mapa cambiará al final de esta ronda."
 	}
 
 	"End of Map Vote Group Won"
 	{
-		"es" "El próximo mapa será '{1},' escojido de la categoria '{2}.'"
+		"es" "El próximo mapa será '{1}', escogido del grupo '{2}'."
 	}
 
 	"Runoff Msg"
 	{
-		"es" "¡Voto Anulado! No se ha alcanzado una mayoría."
+		"es" "¡La votación ha fallado! No se ha alcanzado una mayoría."
 	}
 
 	"Another Vote"
 	{
-		"es" "Otro voto se aproxima en {1} segundos."
+		"es" "Otra votación se aproxima en {1} segundo/s..."
 	}
 
 	"Player Disconnect RTV"
 	{
-		"es" "Mecer el Voto a sido iniciado gracias al jugador desconectado."
+		"es" "La desconexión del jugador ha activado Someter el Voto."
 	}
 
 	"Not Enough Players"
 	{
-		"es" "No hay suficientes jugadores en el servidor para jugar el mapa actual. ({1} jugadores minimo)" 
+		"es" "No hay suficientes jugadores en el servidor para el mapa actual. ({1} requerido/s)" 
 	}
 
 	"Too Many Players"
 	{
-		"es" "Hay demasiados jugadores en el servidor para jugar el mapa actual. ({1} jugadores maximo)"
+		"es" "Hay demasiados jugadores en el servidor para el mapa actual. ({1} máximo)"
 	}
 
 	"No RTV Player Count"
 	{
-		"es" "No se puede ejecutar el Mecer el Voto hasta que {1} jugadores estén conectados al servidor."
+		"es" "No se puede Someter el Voto hasta que {1} haya/n jugador/es más conectado/s al servidor."
 	}
 
 	"No RTV Nextmap"
 	{
-		"es" "No se puede ejecutar el Mecer El Voto hasta el próximo mapa."
+		"es" "No se puede Someter el Voto hasta el próximo mapa."
 	}
 
 	"No RTV Time"
 	{
-		"es" "Podrás Mecer El Voto en aproximadamente {1} segundos."
+		"es" "No se puede Someter el Voto durante {1} segundo/s."
 	}
 
 	"More Required"
 	{
-		"es" "{1} mas requerido/s"
+		"es" "{1} más requerido/s"
 	}
 
 	"RTV Entered"
 	{
-		"es" "{1} desea Mecer el Voto."
+		"es" "{1} desea Someter el Voto."
 	}
 
 	"RTV Info Msg"
 	{
-		"es" " Escribe 'rtv' para ingresar, o escribe 'nominate' para nominar un mapa."
+		"es" "Escribe 'rtv' para ingresar, o bien 'nominate' para nominar un mapa."
 	}
 
 	"RTV Start"
 	{
-		"es" "Meciendo el Voto!"
+		"es" "¡Sometiendo el Voto!"
 	}
 
 	"Vote In Progress"
 	{
-		"es" "Votación en progreso."
+		"es" "Ya hay una votación en progreso."
 	}
 
 	"RTV Already Entered"
 	{
-		"es" "Ya has ingresado en Mecer el Voto"
+		"es" "Ya has ingresado a Someter el Voto."
 	}
 
 	"No Nominate Nextmap"
 	{
-		"es" "No puedes nominar hasta el próximo mapa."
-	}
-
-	"Pending Vote"
-	{
-		"es" "Voto Pendiente"
+		"es" "No se puede nominar hasta el próximo mapa."
 	}
 
 	"Next Map"
@@ -171,7 +166,7 @@
 
 	"Yes/No Menu Title"
 	{
-		"es" "Cambiar mapa a {1}?"
+		"es" "¿Cambiar mapa a {1}?"
 	}
 
 	"Yes"
@@ -191,22 +186,22 @@
 
 	"Default Warning"
 	{
-		"es" "{1} segundos hasta el voto."
+		"es" "{1} segundo/s para votar..."
 	}
 
 	"Vote Failed"
 	{
-		"es" "La votación de mapa a sido anulada. La opción ganadora no a recibido el porcentaje suficiente de los votos."
+		"es" "La votación de mapa ha fallado. La opción ganadora no ha recibido un porcentaje suficientemente alto de los votos."
 	}
 
 	"Selective Runoff"
 	{
-		"es" "Presentando el menú del voto a los jugadores que no votaron o cuyos votos fueron eliminados."
+		"es" "Mostrando el menú de voto a los jugadores que no votaron o cuyos votos fueron eliminados..."
 	}
 
 	"No RTV Admin"
 	{
-		"es" "No tienes los privilegios requeridos para Mecer el Voto."
+		"es" "No tienes los privilegios requeridos para ingresar a Someter el Voto."
 	}
 
 	"No Nominate Admin"
